Set language bar active!

--- a/locales/tr.json
+++ b/locales/tr.json
@@ -55,7 +55,7 @@
   "topics": {
     "title": "C. Murad Özsert - Konuşma Konuları",
     "meta_description": "Placeholder: C. Murad Özsert'in konuşma konuları.",
-    "read_more": "Read more &rarr;",
+    "read_more": "Daha Fazla &rarr;",
     "vol1_title": "Yapay Zeka Üzerine Düşünce Egzersizleri: Vol.1 Dönüşümün Felsefesi",
     "vol1_topic1_title": "Sanayi Devrimi, İnternet ve Yapay Zekâ",
     "vol1_topic1_subtitle": "Üç Dönüşüm, Üç Farklı Dünya",
