hover effect index.html

--- a/locales/en.json
+++ b/locales/en.json
@@ -81,7 +81,7 @@
     "vol1_topic3_modal_p4": "Human-Agent Collaboration: In future organizations, humans and AI agents will work together. Human skills like emotional intelligence, creativity, and ethical judgment will combine with agents' analytical and processing power to create new synergy.",
     "vol1_topic3_modal_p5": "New Roles and Skills: This transformation will require new skills for employees, such as managing, supervising, and developing agents.",
     "vol1_topic3_modal_p6": "Ethical and Security Concerns: The spread of autonomous agents brings important ethical and security questions like data privacy, security vulnerabilities, and accountability for decisions. Effective policies and oversight mechanisms are critical.",
-    "vol1_topic4_title": "Corporate Memory in the Age of Artificial Intelligence",
+    "vol1_topic4_title": "Data Culture in the Age of Artificial Intelligence",
     "vol1_topic4_subtitle": "Whoever Owns the Data, Owns the Future",
     "vol1_topic4_modal_p1": "What is Corporate Memory and Why is it Important? Corporate memory is the sum of an organization's experiences, knowledge, expertise, and past decisions. It is critical for gaining a competitive advantage, learning from mistakes, and fostering innovation.",
     "vol1_topic4_modal_p2": "AI and Big Data: AI enables more effective management of corporate memory by processing vast amounts of structured and unstructured data (emails, reports, meeting notes, customer feedback, etc.).",
@@ -90,7 +90,7 @@
     "vol1_topic4_modal_p5": "Information Loss and Bias: Information loss due to employee turnover (corporate amnesia) can be reduced with AI. However, biases in the data used to train AI systems can also be reflected in corporate memory and lead to wrong decisions.",
     "vol1_topic4_modal_p6": "Whoever Owns the Data, Owns the Future: In the age of AI, companies that effectively manage corporate memory and use data as a strategic asset will stand out in competition and shape the future.",
     "vol2_title": "Thought Exercises on Artificial Intelligence Vol.2 - Transformation of Sectors",
-    "vol2_topic1_title": "The Transforming Mind of Finance with AI",
+    "vol2_topic1_title": "The Transforming Intelligence of Finance with AI",
     "vol2_topic1_subtitle": "Making Sense of Data is Now Very Easy",
     "vol2_topic1_modal_p1": "Algorithmic Trading and Portfolio Management: AI develops algorithmic trading strategies by analyzing market data and predicting trends. Personalized portfolio management and robo-advisory services are becoming widespread.",
     "vol2_topic1_modal_p2": "Risk Management and Fraud Detection: AI plays a critical role in detecting anomalous transaction patterns and potential fraud attempts in real time. Credit risk assessments become more accurate and faster.",
@@ -122,7 +122,7 @@
     "vol2_topic4_modal_p4": "Dynamic Pricing and Promotions: Personalized prices and promotions can be offered instantly based on user loyalty, purchasing potential, and market conditions.",
     "vol2_topic4_modal_p5": "Product Experience with Augmented Reality (AR): Customers can make more informed purchasing decisions by virtually trying on products (furniture, clothes, makeup, etc.) in their own environment or on themselves.",
     "vol3_title": "Thought Exercises on Artificial Intelligence Vol.3 - The Human-AI Relationship",
-    "vol3_topic1_title": "The New Role of Humans in the Age of Artificial Intelligence",
+    "vol3_topic1_title": "The New Role of Human in the Age of Artificial Intelligence",
     "vol3_topic1_subtitle": "HR 4.0: How Should Humanity Transform?",
     "vol3_topic1_modal_p1": "Transformation of Jobs, Not Disappearance: While AI automates some routine and repetitive tasks, it also creates new roles and opportunities for humans. The important thing is to adapt to this change.",
     "vol3_topic1_modal_p2": "The Value of Human-Specific Skills is Increasing: Skills like critical thinking, creativity, emotional intelligence, complex problem-solving, and ethical judgment are becoming even more important in areas where AI cannot compete.",
